# proxmox-infra-manager

./: .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_cpu_count_to_nodes.py  003_add_resource_fields_to_vms_containers.py  004_add_cloud_init_to_vm_templates.py  005_terraform_ssh_remove_ct.py  006_add_ssh_credentials_to_platform_config.py  007_add_user_ssh_keys.py  008_add_tenant_vnet_dhcp_fields.py  009_multi_vnet_support.py  010_add_console_password.py  011_add_vm_auth_type.py  012_add_apps_tables.py  013_update_postgres_playbook_to_compose.py
backend/src/: __init__.py  crypto.py  images.py  logger.py  middleware.py  utils.py
backend/src/api/: __init__.py  apps.py  containers.py  dns.py  docker.py  firewall.py  images.py  init.py  keys.py  networks.py  nodes.py  plugins.py  services.py  terminal.py  users.py  vms.py
backend/src/models/: __init__.py  api.py  db.py
backend/src/nginx_manager/: __init__.py
backend/src/nginx_manager/templates/: http_server.conf.j2  http_upstream.conf.j2  (+2 more)
backend/src/playbooks/: postgres.yml.j2
backend/src/plugin_manager/: __init__.py  docker_runner.py  integration.py  manifest.py
backend/src/proxmox/: __init__.py  base.py  credentials.py  v7.py  v8.py
backend/src/scripts/: install_docker_debian.sh  install_docker_rhel.sh
backend/src/services/: main.py  scheduler.py  ssh_service.py  tenant_network.py  worker.py
backend/src/terraform/: __init__.py  manager.py
backend/tests/: test_tenant_network.py
nginx/: nginx.conf
(+34 files in other folders)
