[project]
name = "infra-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "uvicorn>=0.38.0",
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.2",
    "celery>=5.5.3",
    "kombu>=5.5.0",
    "pydantic>=2.0.0",
    "structlog>=25.5.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "gitpython>=3.1.43",
    "pyyaml>=6.0.2",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.0",
    "asyncssh>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
